# Agatha_Christie_Information_Retrieval_Project

./: README.md  pyproject.toml
Data/: creating_splitted_dataframes.py  preprocessing_functions.py  tokenizing_splitted_dataframes.py
Data/Agatha_Christie_Corpus_txt/: The Hunter's Lodge Case_pg67160.txt  The Missing Will_pg67173.txt  The Seven Dials Mystery_pg75288.txt
Data/splitted_dataframes_with_dif_numbers/: Agatha_Christie_Corpus_Combined_Paragraphs_10.csv  Agatha_Christie_Corpus_Combined_Paragraphs_15.csv  Agatha_Christie_Corpus_Combined_Paragraphs_5.csv  Agatha_Christie_Corpus_Combined_Paragraphs_7.csv
Data/splitted_dataframes_with_dif_numbers_tokenized/: tokenized_Agatha_Christie_Corpus_Combined_Paragraphs_10.csv  tokenized_Agatha_Christie_Corpus_Combined_Paragraphs_15.csv  tokenized_Agatha_Christie_Corpus_Combined_Paragraphs_5.csv  tokenized_Agatha_Christie_Corpus_Combined_Paragraphs_7.csv
Data/splitted_dataframes_with_dif_numbers_tokenized_lemmatised/: tokenized_lemmatised_Agatha_Christie_Corpus_Combined_Paragraphs_10.csv  tokenized_lemmatised_Agatha_Christie_Corpus_Combined_Paragraphs_15.csv  tokenized_lemmatised_Agatha_Christie_Corpus_Combined_Paragraphs_5.csv  tokenized_lemmatised_Agatha_Christie_Corpus_Combined_Paragraphs_7.csv
Index/: index_sql.py
Retrieval/ndcg_results/: ndcg_against_lemmatised.csv
agatha_christie_information_retrieval_project/: creating_splitted_dataframes.py  preprocessing_functions.py  tokenizing_splitted_dataframes.py
agatha_christie_information_retrieval_project/Index/: index_sql.py  inverted_idex.py  inverted_index.py
(+13 files in other folders)
