[tool.poetry]
[project]
name = "agatha-christie-information-retrieval-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sputoa21",email = "anastasiya.saputo@mail.ru "}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (==3.5)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
