[tool.poetry]
[project]
name = "agatha-christie-information-retrieval-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Spouto21", email = "anastasiya.saputo@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = ">=2.2.3,<3.0.0"
nltk = ">=3.9.1,<4.0.0"
spacy = "^3.5.1"
pathlib = ">=1.0.1,<2.0.0"
openpyxl = "^3.1.2" # Added this explicitly for Excel saving, good practice

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"